--- a/block-BHaabd/assets/stylesheet/styl.css
+++ b/block-BHaabd/assets/stylesheet/styl.css
@@ -70,27 +70,30 @@ body {
 .main {
     width: 1200px;
     background-color: white;
-    margin: 0 auto;
+    margin: 20px auto;
     box-sizing: border-box;
 }
 .col {
     width: 400px;
-    
+    font-size: 20px;
 }
 .left {
     float: left;
-    width: 200px;
-    padding: 0 10px;
+    width: 25%;
+    padding: 70px 20px;
 }
 .right {
     float: right;
-    width: 200px;
-    padding: 0 10px;
+    width: 25%;
+    padding: 70px 20px;
 }
 .container img {
-    width: 600px;
+    width: 500px;
 }
 .cat {
     width: 600px;
     margin: 0 auto;
+}
+.cat p {
+    font-size: 18px;
 }
